Samples/Errors/NotAStatement.gs
//This is a G# program with errors. This kind of statement doesnt exist.

point I "am good";

point But "iam better";

clase And "Iam bugged"//Wrong type of statement
//This is being interpreted as a constant declaration.

//End of program